# NLP_trajectory_control_uav

./: README.md
controller/: CMakeLists.txt  package.xml
controller/launch/: controller_launch.py  data_bridge.py  simulation_gaz.py
controller/shell/: drone_control.sh
controller/src/: D_star.cpp  Joy_stick_control.cpp  Trajectory_controll.cpp  ekf_filter.cpp
controller_pro/: package.xml  setup.cfg  setup.py
controller_pro/controller_pro/: test1.py  trajectory_control.py  trajectory_mavros.py  visual_rviz2.py
controller_pro/launch/: data_bridge.py
filter_cpp/: CMakeLists.txt  package.xml
filter_cpp/src/: filter_1.cpp
navi/: package.xml  setup.py
navi/launch/: camera_bridge.py
navi_interfaces/: CMakeLists.txt  package.xml
navi_interfaces/srv/: SetGoal.srv
